--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
+
 
 html,body{
     width: 100%;
@@ -8,10 +10,12 @@ html,body{
 h1,h2,h3,h4{
     margin: 0px;
     padding: 0px;
+    font-family:'Kenia',display ;
+    color: darkgoldenrod;
 }
 
 #game-box{
-    border: 1px solid black;
+    background-color: rgb(207, 207, 207);
     width: 70%;
     margin: 0 auto;
     display: flex;
@@ -24,6 +28,7 @@ h1,h2,h3,h4{
 
 #game_result{
     visibility: hidden;
+    color: red;
     
 }
 
